add_subdirectory(abort)
add_subdirectory(ack-alarm)
add_subdirectory(add-list-element)
add_subdirectory(apdu)
#add_subdirectory(blinkt)
add_subdirectory(create-object)
add_subdirectory(dcc)
add_subdirectory(delete-object)
add_subdirectory(epics)
add_subdirectory(error)
add_subdirectory(event)
#add_subdirectory(fuzz-all)
#add_subdirectory(fuzz-libfuzzer)
#add_subdirectory(gateway)
add_subdirectory(getevent)
add_subdirectory(iam)
add_subdirectory(iamrouter)
add_subdirectory(initrouter)
#add_subdirectory(lib)

if(BACDL_MSTP)
  add_subdirectory(mstpcap)
  add_subdirectory(mstpcrc)
endif()

#add_subdirectory(perl)

if(BACNET_BUILD_PIFACE_APP)
  add_subdirectory(piface)
endif()

# add_subdirectory(ptransfer)

if(BACDL_BIP OR BACDL_BIP6)
  add_subdirectory(readbdt)
  add_subdirectory(readfdt)
endif()

add_subdirectory(readfile)
add_subdirectory(readprop)
add_subdirectory(readpropm)
add_subdirectory(readrange)
add_subdirectory(reinit)

if(BACDL_MSTP)
  add_subdirectory(router)
endif()

if(BACDL_BIP6)
  add_subdirectory(router-ipv6)
endif()

if(BACDL_MSTP AND BACDL_BIP)
  add_subdirectory(router-mstp)
endif()

add_subdirectory(scov)
add_subdirectory(server)

if(BACNET_BUILD_BACPOLL_APP)
  add_subdirectory(server-client)
endif()

if(BACNET_BUILD_BACDISCOVER_APP)
  add_subdirectory(server-discover)
endif()

add_subdirectory(timesync)
add_subdirectory(ucov)
add_subdirectory(uevent)
add_subdirectory(uptransfer)
add_subdirectory(whatisnetnum)
add_subdirectory(whohas)
add_subdirectory(whois)
add_subdirectory(whoisrouter)
# add_subdirectory(writebdt)
add_subdirectory(writefile)
add_subdirectory(writeprop)
add_subdirectory(writepropm)
